tests/sources/invalid/classes/super_call_no_base.fire
// Semantic error: 'this.super(...)' in a class that has no base class.

class Standalone {
    int32 x;

    Standalone(int32 x) {
        this.super();  //~ ERROR FS-SEM-0010 @14
        this.x = x;
    }
}
